--- a/now.json
+++ b/now.json
@@ -1,6 +1,8 @@
 {
     "version": 2,
+    "name": "my-nextjs-project",
     "builds": [
+        { "src": "package.json", "use": "@vercel/next" },
         {"src": "index.js", "use": "@now/node-server" }
     ],
     "routes": [
