--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "my-nextjs-project",
     "builds": [
-        { "src": "package.json", "use": "@vercel/next" },
+        { "src": "package.json", "use": "@now/node-next" },
         {"src": "index.js", "use": "@now/node-server" }
     ],
     "routes": [
